<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kgs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/edit_message"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/Kilograms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:hint="@string/edit_message"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/Initialize"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/edit_message2"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Pounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:hint="@string/edit_message2"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/Initialize"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/button0"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_25"
                    app:layout_constraintEnd_toStartOf="@+id/button1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbs"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_20"
                    app:layout_constraintEnd_toStartOf="@+id/button2"
                    app:layout_constraintStart_toEndOf="@+id/button0"
                    app:layout_constraintTop_toBottomOf="@+id/Pounds"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.35"
                    app:layout_constraintStart_toEndOf="@+id/button1"
                    app:layout_constraintTop_toBottomOf="@+id/Pounds"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_10"
                    app:layout_constraintEnd_toStartOf="@+id/button4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button0"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_5"
                    app:layout_constraintEnd_toStartOf="@+id/button5"
                    app:layout_constraintStart_toEndOf="@+id/button3"
                    app:layout_constraintTop_toBottomOf="@+id/button1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_2_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button4"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_0125"
                    app:layout_constraintEnd_toStartOf="@+id/button7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_05"
                    app:layout_constraintEnd_toStartOf="@+id/button10"
                    app:layout_constraintStart_toEndOf="@+id/button6"
                    app:layout_constraintTop_toBottomOf="@+id/button4"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/button10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/empty"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kg_025"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button7"
                    app:layout_constraintTop_toBottomOf="@+id/button5"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#F7EE08"
                    android:text="@string/Button9"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#0DF80D"
                    android:text="@string/add"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/button8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button7"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="#F44336"
                android:text="@string/time_converter"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>